Main Features:
    - Created component named “catCard” using Bootstrap
    - Added the following attributes the the class “cat-card.component.ts”:
      - img
      - title
    - Created a responsive grid for the category cards
    - Created a CHANGELOG
    - Implemented basic routing setup
    - Added vertical carousel components
      - Need to add vertical movement
    - Added routing to home page
    - Added routing to 4 new layouts
      - Store (will contain individual links for all categories)
      - Categories
      - Sign In
      - Sign Up 
    - Added new icon components
    - Added sign-in/sign-up top navbar component


Bonus Features:
    - Created a helper class called 'flex-center' to quickly center flex-based items on the x-axis
    - Created a list for all 12 category cards containing the image and title
    - Centered the category cards div
    - Clicking the logo opens a new tab with the original gopuff website
    - Created a home layout to organize startup components
    - Updated README
    - Added main screen header components
    - Formatted home screen more