@@ -7,5 +7,12 @@
         <p class="fs-2 fw-bolder text-dark gp__sign-up-body text-center">Order in seconds, delivered in 30 minutes
             or less.</p>
         <p class="text-center">You sign up. We deliver — fast.</p>
+        <gp-sign-up-email-box>Loading...</gp-sign-up-email-box>
+        <p class="my-4 text-center gp__sign-up-text">By continuing, you agree to our <a class="gp__link" href="#">Terms
+                of
+                Service</a></p>
+        <a routerLink="../categories" class="gp__link text-center">Continue As Guest</a>
     </div>
 </div>
+
+<gp-sign-up-bottom-nav>Loading...</gp-sign-up-bottom-nav>
