@@ -1,0 +1,8 @@
+.navbar {
+  border-top: 1px solid #e8ecee;
+}
+
+.gp__link {
+  text-decoration: none;
+  color: #00a4ff;
+}
