@@ -1,0 +1,5 @@
+<nav class="navbar navbar-light bg-white fixed-bottom d-flex justify-content-center align-items-center">
+
+    <p class="pt-3 ">Already have an account? <a routerLink="../user-login" class="gp__link">Sign In</a></p>
+
+</nav>
