@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'gp-sign-up-bottom-nav',
+  templateUrl: './sign-up-bottom-nav.component.html',
+  styleUrls: ['./sign-up-bottom-nav.component.css']
+})
+export class SignUpBottomNavComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
