@@ -1,0 +1,15 @@
+<form>
+    <div class="input-group mt-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text p-3" id="sign-up-email"><svg xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24" role="img" aria-hidden="true" class="gp__sign-up-icon">
+                    <path
+                        d="M22 6C22 4.9 21.1 4 20 4H4C2.9 4 2 4.9 2 6V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6M20 6L12 11L4 6H20M20 18H4V8L12 13L20 8V18Z">
+                    </path>
+                </svg></span>
+        </div>
+        <input type="text" class="form-control" placeholder="Email*" aria-label="Email"
+            aria-describedby="sign-up-email">
+    </div>
+    <button type="submit" class="btn gp__next-btn w-100 p-2 mt-4 fw-bolder">Next</button>
+</form>
