@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'gp-sign-up-email-box',
+  templateUrl: './sign-up-email-box.component.html',
+  styleUrls: ['./sign-up-email-box.component.css']
+})
+export class SignUpEmailBoxComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
