@@ -2,6 +2,6 @@
     <button class="btn btn-primary gp__back-btn float-left ms-2" routerLink="">
         <img src="../../assets/left-arrow.png" alt="" class="w-75 h-75">
     </button>
-    <img src="../../assets/gopuff-logo-white.svg" alt="" class="float-center">
+    <img src="../../assets/gopuff-logo-white.svg" alt="" class="float-center me-5">
     <div class="me-2"></div>
 </nav>
