@@ -1,4 +1,5 @@
 Main Features:
+  Before 2/17/22
     - Created component named “catCard” using Bootstrap
     - Added the following attributes the the class “cat-card.component.ts”:
       - img
@@ -15,15 +16,24 @@ Main Features:
       - Sign In
       - Sign Up 
     - Added new icon components
+  2/17/22
     - Added sign-in/sign-up top navbar component
+    - Added sign-up email submission form component
+    - Added sign-up bottom navbar component
 
 
 Bonus Features:
+  Before 2/27/22
     - Created a helper class called 'flex-center' to quickly center flex-based items on the x-axis
     - Created a list for all 12 category cards containing the image and title
     - Centered the category cards div
     - Clicking the logo opens a new tab with the original gopuff website
     - Created a home layout to organize startup components
     - Updated README
-    - Added main screen header components
+    - Added main screen header components 
     - Formatted home screen more
+  2/17/22
+    - Added more details to sign-up layout
+    - Centered gopuff logo for sign-in/sign-up top navbar
+    - Finished styling sign-up layout
+    
